[package]
name = "eviebot"
version = "0.2.1"
edition = "2024"

[dependencies]
poise = { version = "0.6.1", features = ["cache"] }
serenity = { version = "0.12.4", features = ["cache"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
